Correct spacing, change the unordered list to a table.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,5 +5,5 @@
 
 .best {
   border: 10px dotted pink;
-  margin: 50px;
+  margin: 20px;
 }
